Adds functions to hide/show html elements but does not implement them. Also creates choose game buttons.

--- a/style.css
+++ b/style.css
@@ -9,3 +9,15 @@ body {
 div {
     margin: 1em;
 }
+
+.game{
+    display: none
+}
+
+#threes {
+    display: none
+}
+
+#ceelo {
+    display: none
+}
