Adds function to hide/show ceelo button. Function does not fully work yet

--- a/style.css
+++ b/style.css
@@ -5,15 +5,19 @@
 div {
     margin: 1em;
 }
-
-/* .game{
+/* 
+.game{
     display: none
 } */
-
+/* 
 #threes {
     display: none
 }
-/* 
+
 #ceelo {
     display: none
 } */
+
+.is-visible {
+    display: none
+}
