--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     display: none !important
 }
 
-.dice, .potentialDice {
+.dice, .potentialDice, .hold {
     display: inline-block
 }
 
@@ -16,9 +16,7 @@
     text-align: right
 }
 
-.hold {
-    text-align: right
-}
+
 
 div {
     margin: 1em;
