--- a/style.css
+++ b/style.css
@@ -1,7 +1,34 @@
-.header {
+*{
+    margin: 0;
+}
+
+body {
+    background-color: #064bed;
+}
+
+#header {
+    margin: 0em;
+    padding: 0em;
+    border: 0em;
+    text-align: center;
+    background-color: #f53206; 
+    color: #064bed;
+    width: 100vw
+}
+/*  */
+.buttonDiv {
     text-align: center
+}
 
-
+.button {
+    background-color: #f53206;
+    border: none;
+    color: #064bed;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
 
 .hidden {
@@ -45,4 +72,16 @@ div {
 
 #t {
     text-align: right
+}
+
+.potentialDice {
+    background-color: #2ced06;
+    padding: .5em;
+    color: #f53206
+}
+
+.hold {
+    padding: 1em;
+    color: #2ced06;
+    background-color: #f53206
 }
