--- a/style.css
+++ b/style.css
@@ -50,22 +50,7 @@ body {
 div {
     margin: 1em;
 }
-/* 
-.game{
-    display: none
-} */
-/* 
-#threes {
-    display: none
-}
 
-#ceelo {
-    display: none
-} */
-
-.is-visible {
-    display: none
-}
 #c {
     text-align: left
 }
@@ -90,5 +75,11 @@ div {
 .score {
     color: #f4f1bb;
     font-size: 5em;
+    text-align: center
+}
+
+#instructions, #rolled {
+    padding: .5em;
+    color: #ed6a5a;
     text-align: center
 }
