Adds if/else if logic to check rolls for scores. If score is reached, score is printed to dom in new div.

--- a/style.css
+++ b/style.css
@@ -78,8 +78,9 @@ div {
     text-align: center
 }
 
-#instructions {
+#instructions, #rolled {
     padding: .5em;
+    font-size: 3em;
     color: #ed6a5a;
     text-align: center
 }
