Import nodeList Handler function into Threes module and calls it when needed.

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ div {
     text-align: center
 }
 
-.ceeloRoll {
+.ceeloDice, .threes {
     display: inline-block;
     padding: 1em;
     color: #f4f1bb;
