Fixes Threes reset button. Now effectively deletes the rendered score.

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ div {
     text-align: center
 }
 
-.ceeloDice, .threes {
+.ceeloDice, .threesDice {
     display: inline-block;
     padding: 1em;
     color: #f4f1bb;
